# nds-rust-patch-template

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml  linker.ld
asm/: test.asm
src/: main.rs
